Add extension